increase masonry wrapper size to prevent hairlines on mobile

--- a/src/templates/marketing-page-template/styles.module.scss
+++ b/src/templates/marketing-page-template/styles.module.scss
@@ -14,7 +14,7 @@
     display: inline-block;
     width: 100%;
     font-size: 0;
-    transform: scale(1.002);
+    transform: scale(1.004);
     .masonryImage {
       width: 100%;
       object-fit: cover;
